# wasm-builder-regression

wasm-checker/: Cargo.toml
wasm-checker/src/: main.rs
wasm-program/: Cargo.toml
wasm-program/src/: lib.rs
wasm-project/: Cargo.toml  check.sh  rust-toolchain.toml
wasm-project/src/: lib.rs
